# plugin-manager

./: .eslintrc  .eslintrc.cjs  .gitignore  .prettierrc  Cargo.toml  README.md  build.rs  cypress.config.ts  eslint.config.mjs  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  save.json  tailwind.config.js  tauri.conf.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: rust.yml  ts.yml
app/: index.js
app/back/: index.ts
app/front/src/model/: channel.ts  controller.ts  file-tree.ts
app/front/src/styles/: style.css
app/front/src/utils/: event-emitter.ts
app/front/src/view/: ChannelIO.svelte  Editable.svelte
app/front/src/view/knobs/: Fader.svelte
app/src/: index.ts
app/src/declaration-merging/: document-extended.d.ts
app/src/model/: cable.ts  channel.ts  controller.ts  io.ts  preferences.ts  rack-item.ts  state.ts
app/src/model/items/: compressor.ts  eq.ts  gate.ts  instrument.ts  processors.ts  reverb.ts  volume.ts
app/src/model/items/processors/: audio-output.ts  audio-source.ts  compressor.ts  eq.ts  gain.ts  gate.ts  instrument.ts  midi-controller.ts  oscillator.ts  plugin.ts  reverb.ts
app/src/styles/: global.css  style.css
app/src/styles/scss/: bs-overwrite.scss
app/src/utils/: check.ts  clock.ts  color.ts  contextmenu.ts  copy.ts  event-emitter.ts  keybinds.ts  knob.js  match.ts  math.ts  prompt.ts  socket.ts  tauri.ts  text.ts
app/src/utils/calcs/linear-algebra/: catenary.ts  matrix-calculations.ts
app/src/view/: Channel.svelte  Contextmenu.svelte  IO.svelte  Index.svelte  Main.svelte  Meter.svelte  Mixer.svelte  NavBar.svelte  Navbar.svelte  Rack.svelte  RackBackground.svelte  RackBorder.svelte  RackItem.svelte
app/src/view/components/: Navbar.svelte  Rack.svelte  RackItem.svelte
app/src/view/components/rack-items/: Mixer.svelte
app/src/view/knobs/: Fader.svelte  Gain.svelte  Knob.svelte
app/static/: index.html
crates/pm_rack/: Cargo.toml  serialized.json
crates/pm_rack/src/: lib.rs  prelude.rs
crates/pm_utils/: Cargo.toml
crates/pm_utils/src/: lib.rs
crates/ruckus/: Cargo.toml
crates/ruckus/src/commands/: mod.rs
crates/ruckus_rack/: Cargo.toml
crates/ruckus_rack/src/: lib.rs
crates/vst_tauri/: Cargo.toml  tauri.conf.json
crates/vst_tauri/src/: main.rs
crates/vst_tauri/src/utils/: mod.rs
docker/rust-ci-container/: Dockerfile
icons/: icon.icns
ruckus/: Cargo.toml  tauri.conf.json
ruckus/src/: main.rs
ruckus_app/: Cargo.toml  tauri.conf.json
ruckus_app/src/: main.rs
ruckus_lib/: Cargo.toml
ruckus_lib/src/: lib.rs
ruckus_lib/src/commands/: mod.rs  save_load.rs
ruckus_rack/src/: lib.rs
scripts/: esbuild.ts  fmt-lint-check.sh  fmt.sh  run.sh  serialized.json  test.ts
src/: debug.rs  lib.rs  main.rs
src/commands/: mod.rs  save_load.rs
src/console/: mod.rs
src/dev/: mod.rs  serialized.json  test_state_schema.rs
src/tests/: mod.rs  serialized.json  test_state_schema.rs
ui/src/model/: io.ts  rack-item.ts
ui/src/model/items/: processors.ts
ui/src/view/: RackBackground.svelte  RackItem.svelte
