[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2021"
description = "A program to manage live effects for performances"
license = "Copyright"
repository = "https://github.com/tsaxking/plugin-manager"
keywords = ["Audio", "Effects", "Performance"]
categories = ["multimedia"]

[dependencies]
anyhow = "1.0.83"
cpal = "0.15.3"
fundsp = "0.17.1"
futures = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tauri = { version = "1.6.2", features = ["custom-protocol"] }
thiserror = "1.0.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dev-dependencies]
diff = "0.1.13"
serde_path_to_error = "0.1.16"
