[workspace]
resolver = "2"
members = [
    "crates/*",
]

[package]
name = "pm"
version = "0.1.0"
edition = "2021"
license = "Copyright"
repository = "https://github.com/tsaxking/plugin-manager"

[[bin]]
name = "output_json"
bulid = "src/output_json_build.rs"
test = false
bench = false

[dependencies]
pm_rack = { path = "./crates/pm_rack" }
anyhow = "1.0.83"
cpal = "0.15.3"
fundsp = "0.17.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tauri = { version = "1.6.2", features = ["custom-protocol"] }
thiserror = "1.0.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dev-dependencies]
diff = "0.1.13"
serde_path_to_error = "0.1.16"

