[package]
name = "pm"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["bevy_render","bevy_asset","bevy_sprite","bevy_text","bevy_winit","webgl2"], default-features = false }
bevy_egui = { version = "0.26.0", features = ["render", "default_fonts"], default-features = false }
peak_alloc = "0.2.1"



